[package]
name = "struct-box"
description = "Securely encrypt any serializable struct / enum"
version = "0.0.0-git"
authors = ["Matt Palmer <matt@hezmatt.org>"]
license = "GPL-3.0-only"
homepage = "https://github.com/mpalmer/struct-box"
repository = "https://github.com/mpalmer/struct-box"
edition = "2021"
# Remember: changing this is a breaking change (and requires updating CI configs, too)
rust-version = "1.74"

include = [
	"/LICENCE",
	"/src/*.rs",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"

[dev-dependencies]
ciborium = "0.2"
serde = "1.0"
strong-box = "0.4"
